--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -9,6 +9,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/_Levels/BattleGround/BattleGround.BattleGround
 GameDefaultMap=/Game/_Levels/BattleGround/BattleGround.BattleGround
+GlobalDefaultGameMode=/Game/BattleTankGameModeBase_BP.BattleTankGameModeBase_BP_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
