Added a main menu and controller Support

--- a/BattleTank/Config/DefaultGame.ini
+++ b/BattleTank/Config/DefaultGame.ini
@@ -1,2 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=ABE6776142BECAAF36206881A3C3E393
+CopyrightNotice=Copyright Shalom Aloni
+
