--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -38,8 +38,12 @@ bCaptureMouseOnLaunch=True
 DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 bDefaultViewportMouseLock=False
 DefaultViewportMouseLockMode=LockOnCapture
++ActionMappings=(ActionName="Quit",Key=Gamepad_Special_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Quit",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="Elevation",Key=MouseY,Scale=1.000000)
 +AxisMappings=(AxisName="Azimuth",Key=MouseX,Scale=1.000000)
++AxisMappings=(AxisName="Elevation",Key=Gamepad_RightY,Scale=-1.000000)
++AxisMappings=(AxisName="Azimuth",Key=Gamepad_RightX,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
