--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -44,6 +44,11 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="Azimuth",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="Elevation",Key=Gamepad_RightY,Scale=-1.000000)
 +AxisMappings=(AxisName="Azimuth",Key=Gamepad_RightX,Scale=1.000000)
++AxisMappings=(AxisName="Forward",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="Forward",Key=Gamepad_LeftY,Scale=1.000000)
++AxisMappings=(AxisName="Right",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="Right",Key=Gamepad_LeftX,Scale=1.000000)
++AxisMappings=(AxisName="Right",Key=A,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
